# antipode

./: .env.example  .gitignore  README.md  pyproject.toml
config/: bank_postgres.yaml  postgres.yaml
data/test_scenarios/INT-2024-09-01-1/bank_data/: accounts.json  counterparties.json  customers.json  transactions.json
data/test_scenarios/INT-2024-09-01-1/ground_truth/: metadata.json  scenario.json  validation.json
data/test_scenarios/INT-2024-09-01-1/raw_data/: accounts.json  entities.json  transactions.json
data/test_scenarios/ML-2023-CRYPTO-001/bank_data/: accounts.json  counterparties.json  customers.json  transactions.json
data/test_scenarios/ML-2023-CRYPTO-001/ground_truth/: metadata.json  scenario.json  validation.json
data/test_scenarios/ML-2023-CRYPTO-001/raw_data/: accounts.json  entities.json  transactions.json
data/test_scenarios/ML-SC-123456/bank_data/: accounts.json  counterparties.json  customers.json  relationships.json  transactions.json
data/test_scenarios/ML-SC-123456/ground_truth/: metadata.json  (+2 more)
docs/: POSTGRES_IMPLEMENTATION_SUMMARY.md  POSTGRES_QUICKSTART.md  POSTGRES_SCHEMA_DESIGN.md  SYNTHETIC_DATA_IMPLEMENTATION_PLAN.md
examples/: generate_synthetic_data.py
scripts/: debug_schema.py  load_tms_to_postgres.py  setup_bank_schema.py  test_aws_db_connection.py
sql/: bank_schema.sql  schema.sql
src/antipode/: __init__.py
src/antipode/adversarial/: __init__.py  aml_agent_system_design.md  sythetic-data-prd-v2.md  tools.py  tools_data.py
src/antipode/data/: __init__.py  aml_data_generator.py
src/antipode/graph/: __init__.py  database.py  models.py
src/antipode/tracking/: __init__.py  mlflow_tracker.py
tests/: test_aml_data_generator.py
(+113 files in other folders)
